# code

./: .gitignore  gitnotes.md
c++/dft/: .cproject  .project  fft.cpp  name
c++/dtmf/: .cproject  .project  Makefile  dtmf.cpp  fft.h  test.bat
c++/render/: .cproject
c++/第二次大作业/: Makefile  dtmf.cpp  fft.h  key.h
c/2/: CMakeLists.txt  路由器开发实验20181007.pptx  路由器开发实验指导20181008.docx
c/2/forward/: .cproject  .project  CMakeLists.txt  checksum.c  lookuproute.c  lookuproute.h  main  main.c
c/database/: CMakeLists.txt
c/json-tutorial/: .project
c/router/: CMakeLists.txt  Makefile  checksum.c  error.c  error.h  main.c  t1.c
c/router/include/: arpfind.h  checksum.h  error.h  lookuproute.h
c/router/src/: arpfind.c  main.c
c/router/test/: arp_test.c  makefile
c/tcp/: CMakeLists.txt  README.md
c/who/: CMakeLists.txt  README.md  main.c  utmp.h  utmplib.c  utmplib.h
haskell/: .note.md.swp  note.md
haskell/exercise/: exercise.cabal  package.yaml
haskell/exercises/: W3.hs  W3Test.hs  W4.hs  W4Test.hs
haskell/fpproject/: README.md  package.yaml  stack.yaml
haskell/hw5/: package.yaml
haskell/project/: package.yaml
java/PA3/: casterror.decaf
java/decaf_PA1A/: .project
java/decaf_PA1_B/: .classpath  .project  build.xml  multi-errors-1.decaf  multi-errors-8.decaf  submit.py
java/decaf_PA2/: .project  q1-1.decaf  q1-5.decaf
java/decaf_PA4/: stack.decaf
java/decaf_PA5/: ._submit.py
java/hsqldb-2.4.0/: 阅读.docx
java/java_base/: ReadMe.txt
java/sql/: 01.sql  02.sql  03.sql  04.sql  04.txt  05.sql  06.sql  06.txt  07.sql  07.txt  08.sql  08.txt  09.sql  10.sql  11.sql  12.sql
java/src/: UF.java
notes/: LaTex.ipynb  gitnotes.md  network.md
notes/English/: 19-2-20.md  19-2-21.md  19-2-22.md  19-2-23.md  19-2-24.md  19-2-25.md  19-2-28.md  19-3-1.md  19-3-12.md  19-3-13.md  19-3-20.md  19-3-22.md  19-3-27.md  19-3-28.md  19-3-29.md  19-3-3.md  19-3-30.md  19-3-9.md  19-4-10.md  19-4-12.md  19-4-21.md  19-4-9.md  19-5-16.md  19-5-22.md  19-8-16.md  phonetics.md  word_by_word.md
python/: README.md  make_database.py  system_test.py
python/charcnn/: evaluate_box.py  gui.py  remove_border.py  report.pptx  test_googlenet.py  train_RACNN.py  train_alexnet.py  train_arn.py  train_charcnn.py  train_difangzhi.py  train_googlenet.py  train_resnetx.py  train_segooglenet.py  ui.py
python/classifier/: casia_train.py  difangzhi_train.py  dtp.py  evaluate_box.py  make_database.py  preprocess.py  remove_border.py  system_test.py  test.py
python/ctrlf/: ctrlfnet_model.py  evaluate.py  move_dunhuang.py  recall_utils.py  train.sh  train_difangzhi.py  train_opts.py  ~$ Microsoft Word 文档.docx  ~WRL0005.tmp  新建 Microsoft Word 文档.docx
python/intern/: CBOW.py  CMakeLists.txt
python/intern/charcnn/: test.py  train_charcnn.py  train_googlenet.py  train_resnetx.py
python/intern/charcnn/datasets/: Char4037-list.txt  casia_googlenet.py  casia_resnetx.py
python/intern/charcnn/models/: charcnn.py  googlenet.py
python/intern/charcnn/runs/Jul23_09-12-50_user-ubuntu07-23 09_12_50CharCnn/: events.out.tfevents.1532351570.user-ubuntu
python/intern/charcnn/runs/Jul23_09-54-09_user-ubuntu07-23 09_54_09GoogLeNet/: events.out.tfevents.1532354049.user-ubuntu
python/intern/charcnn/utils/: dgr.py  segmentation.py
python/locator/: dtp.py  preprocess.py
python/semi-supervised/: CMakeLists.txt  gui.py  progressbar.py  test.py  train.py
python/semi-supervised/utils/: char2index.pkl
python/shufti-master/: setup.py  shufti.py
racket/: hw4.rkt
racket/hw4/: h4gtest.rkt  h4test.rkt  hw4.rkt
racket/hw5/: hw5.rkt  hw5test.rkt
ruby/final/: final.bak  final.rb  final.rkt
ruby/hw6/: #hw6provided.rb#  hw6assignment.rb  hw6graphics.rb
ruby/hw7/: hw7.rb  hw7.sml
sml/: h1.sml  hw1.sml  hw2.sml  hw3.sml  test.sml
sml/hw1/: hw1_test.sml
sml/hw2/: hw2test.sml
sml/hw3/: hw3test.sml
sml/midterm/: midterm.sml  rbnum.sml
wireshark/lab1/: lab1.md
wireshark/lab10/: lab10.md
wireshark/lab11/: lab11.md
wireshark/lab12/: lab12.md
wireshark/lab2/: 1.pcapng  2.pcapng  3-2.pcapng  3.pcapng  4.pcapng  5.pcapng  lab2.md
wireshark/lab3/: 2.pcapng  3.pcapng  4.pcapng  5.pcapng  lab3.md
wireshark/lab4/: .lab4.md.swp  1.pcapng  lab4.md
wireshark/lab5/: .lab5.md.swp  1.pcapng  lab5.md
wireshark/lab6/: 1.pcapng
wireshark/lab7/: 1.pcapng  lab7.md
(+489 files in other folders)
